--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -35,4 +35,8 @@
         height: 45px;
         font-size: 12px;
     }
+    &_consultation {
+        width: 180px;
+        height: 45px;
+    }
 }
