--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,11 +9,20 @@
 @import 'blocks/work';
 @import 'blocks/china';
 @import 'blocks/price';
+@import 'blocks/consultation';
+@import 'blocks/menagers';
+@import 'blocks/sheme';
+@import 'blocks/reviews';
 
 *{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+h1, h2, h3, h4 {
+    font-weight: inherit;
+    font-size: inherit;
 }
 
 .container {
