--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,6 @@
 @import 'libs/bootstrap-reboot.min';
+@import 'libs/owl.carousel.min.scss';
+@import 'libs/owl.theme.default.min.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
@@ -26,7 +28,7 @@ h1, h2, h3, h4 {
 }
 
 .container {
-    max-width: 1170px;
+    width: 1170px;
     margin: 0 auto;
     padding: 0px 15px 0px 15px;
 }
