--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,8 @@
 @import 'blocks/menagers';
 @import 'blocks/sheme';
 @import 'blocks/reviews';
+@import 'blocks/question';
+@import 'blocks/footer';
 
 *{
     font-family: 'Roboto', sans-serif;
